--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             Add an item
           </label>
           <input id="item" type="text" placeholder="e.g., broccoli">
-          <button type="submit">
+          <button type="submit" class="btn btn-primary">
             Add item
           </button>
       </form>
